--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ plugins {
 apply plugin: 'forge'
 apply plugin: 'maven-publish'
 
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
 import org.ajoberstar.grgit.Grgit
 
 def repo = Grgit.open(project.file('.'))
