--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
-mod_version=2.9.7-GTNH
+mod_version=1.7.10-2.9.7-GTNH
 minecraft_version=1.7.10
-forge_version=10.13.4.1481-1.7.10
+forge_version=10.13.4.1614-1.7.10
 
 ctmlib_version=MC1.7.10-1.4.1.5
 ccl_version=1.1.3.140
