--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.github.GTNH2:ForgeGradle:FG_1.2-SNAPSHOT'
+        classpath 'com.github.GTNewHorizons:ForgeGradle:1.2.4'
     }
 }
 
@@ -95,7 +95,11 @@ repositories {
         name 'Chisel Repo'
         url "http://maven.tterrag.com/"
     }
-	    ivy {
+    maven {
+        name = "jitpack.io"
+        url = "https://jitpack.io"
+    }
+	ivy {
         name = "gtnh_download_source_ee3"
         artifactPattern("http://downloads.gtnewhorizons.com/Mods_for_Jenkins/[module]-[revision].[ext]")
     }
@@ -105,10 +109,10 @@ repositories {
 
 dependencies {
     compile "mcp.mobius.waila:Waila:${waila_version}_${minecraft_version}:dev"
-    compile "codechicken:CodeChickenLib:${minecraft_version}-${ccl_version}:dev"
-    compile "codechicken:CodeChickenCore:${minecraft_version}-${ccc_version}:dev"
-    compile "codechicken:NotEnoughItems:${minecraft_version}-${nei_version}:dev"
-    compile "codechicken:ForgeMultipart:${minecraft_version}-${fmp_version}:dev"
+    compile "com.github.GTNewHorizons:CodeChickenLib:master-SNAPSHOT:dev"
+    compile "com.github.GTNewHorizons:CodeChickenCore:master-SNAPSHOT:dev"
+    compile "com.github.GTNewHorizons:NotEnoughItems:master-SNAPSHOT:dev"
+    compile "com.github.GTNewHorizons:ForgeMultipart:master-SNAPSHOT:dev"
     compile "com.pahimar.ee3:EquivalentExchange3:1.7.10-0.3.505:dev"
     
     shade ("team.chisel.ctmlib:CTMLib:${ctmlib_version}") {
@@ -129,7 +133,7 @@ processResources {
         expand 'version': project.version, 'mcversion': project.minecraft.version
     }
 
-    // copy everything else, thats not the mcmod.info
+    // copy everything else, that's not the mcmod.info
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
     }
