Migrated to unified build script

--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,28 @@
-#eclipse
-.project
+.gradle
+.settings
+/.idea/
+/run/
+/build/
+/eclipse/
 .classpath
-.metadata
-org.*
-bin
-
-#idea
-.idea
+.project
+/bin/
+/config/
+/crash-reports/
+/logs/
+options.txt
+/saves/
+usernamecache.json
+banned-ips.json
+banned-players.json
+eula.txt
+ops.json
+server.properties
+servers.dat
+usercache.json
+whitelist.json
+/out/
 *.iml
 *.ipr
 *.iws
-out
-classes
-
-#gradle
-build
-.gradle
-
-#runtime
-eclipse
-run
-
-#mac
-.DS_Store
-*.command
-
-#windows
-Thumbs.db
-
-#workspace
-saves
-asm
-logs
-screenshots
-mods
-lib
-libs
-#config  I assume you want to keep your minecraft config and world out
-#world   this is taken care of with the run folder up at runtime you are actually removing the packages
-
-*.json
-/server.properties
-*.dat
-*.psd
-*.bat
+src/main/resources/mixins.*.json
