--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,9 +1,9 @@
 // Add your dependencies here
 
 dependencies {
-    shadowImplementation("team.chisel.ctmlib:CTMLib:MC1.7.10-1.4.1.5")
-
     compile("com.github.GTNewHorizons:NotEnoughItems:master-SNAPSHOT:dev")
+
+    compile("team.chisel.ctmlib:CTMLib:MC1.7.10-1.4.1.5")
 
     compileOnly("com.github.GTNewHorizons:waila:master-SNAPSHOT:dev") {
         transitive = false
