--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -3,7 +3,7 @@
 dependencies {
     compile("com.github.GTNewHorizons:NotEnoughItems:master-SNAPSHOT:dev")
 
-    compile("team.chisel.ctmlib:CTMLib:MC1.7.10-1.4.1.5")
+    compile("org.projectlombok:lombok:1.16.4")
 
     compileOnly("com.github.GTNewHorizons:waila:master-SNAPSHOT:dev") {
         transitive = false
