update to explicit dependencies

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,14 +1,14 @@
 // Add your dependencies here
 
 dependencies {
-    compile("com.github.GTNewHorizons:NotEnoughItems:master-SNAPSHOT:dev")
-
+    compile("com.github.GTNewHorizons:NotEnoughItems:2.1.22-GTNH:dev")
+    compile("com.github.GTNewHorizons:CodeChickenLib:1.1.5.1:dev")
     compile("org.projectlombok:lombok:1.16.4")
 
-    compileOnly("com.github.GTNewHorizons:waila:master-SNAPSHOT:dev") {
+    compileOnly("com.github.GTNewHorizons:waila:1.5.18:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:ForgeMultipart:master-SNAPSHOT:dev") {
+    compileOnly("com.github.GTNewHorizons:ForgeMultipart:1.2.7:dev") {
         transitive = false
     }
 
