--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,8 +1,9 @@
 // Add your dependencies here
 
 dependencies {
-    compile("com.github.GTNewHorizons:NotEnoughItems:2.1.22-GTNH:dev")
+    compile("com.github.GTNewHorizons:CodeChickenCore:1.1.3:dev")
     compile("com.github.GTNewHorizons:CodeChickenLib:1.1.5.1:dev")
+    compile("com.github.GTNewHorizons:NotEnoughItems:2.1.22-GTNH:dev")
     compile("org.projectlombok:lombok:1.16.4")
 
     compileOnly("com.github.GTNewHorizons:waila:1.5.18:dev") {
