--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -4,7 +4,10 @@ dependencies {
     compile("com.github.GTNewHorizons:CodeChickenCore:1.1.5:dev")
     compile("com.github.GTNewHorizons:CodeChickenLib:1.1.5.3:dev")
     compile("com.github.GTNewHorizons:NotEnoughItems:2.2.8-GTNH:dev")
-    compile("org.projectlombok:lombok:1.16.4")
+    compileOnly("org.projectlombok:lombok:1.18.24")
+    annotationProcessor("org.projectlombok:lombok:1.18.24")
+
+    shadeCompile("com.github.GTNewHorizons:CTMLib:1.4.2:dev")
 
     compileOnly("com.github.GTNewHorizons:waila:1.5.19:dev") {
         transitive = false
