--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,18 +1,18 @@
 // Add your dependencies here
 
 dependencies {
-    compile("com.github.GTNewHorizons:CodeChickenCore:1.1.5:dev")
-    compile("com.github.GTNewHorizons:CodeChickenLib:1.1.5.3:dev")
-    compile("com.github.GTNewHorizons:NotEnoughItems:2.2.8-GTNH:dev")
+    implementation("com.github.GTNewHorizons:CodeChickenCore:1.1.11:dev")
+    implementation("com.github.GTNewHorizons:CodeChickenLib:1.1.8:dev")
+    implementation("com.github.GTNewHorizons:NotEnoughItems:2.3.82-GTNH:dev")
     compileOnly("org.projectlombok:lombok:1.18.24")
     annotationProcessor("org.projectlombok:lombok:1.18.24")
 
     shadowImplementation("com.github.GTNewHorizons:CTMLib:1.4.4:dev")
 
-    compileOnly("com.github.GTNewHorizons:waila:1.5.19:dev") {
+    compileOnly("com.github.GTNewHorizons:waila:1.6.0:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:ForgeMultipart:1.2.7:dev") {
+    compileOnly("com.github.GTNewHorizons:ForgeMultipart:1.3.4:dev") {
         transitive = false
     }
 
