--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,9 +1,9 @@
 // Add your dependencies here
 
 dependencies {
-    implementation("com.github.GTNewHorizons:CodeChickenCore:1.3.4:dev")
+    implementation("com.github.GTNewHorizons:CodeChickenCore:1.3.6:dev")
     implementation("com.github.GTNewHorizons:CodeChickenLib:1.3.0:dev")
-    implementation("com.github.GTNewHorizons:NotEnoughItems:2.6.14-GTNH:dev")
+    implementation("com.github.GTNewHorizons:NotEnoughItems:2.6.19-GTNH:dev")
 	implementation("com.github.GTNewHorizons:ForgeMultipart:1.5.0:dev")
 
     compileOnly("org.projectlombok:lombok:1.18.24")
@@ -18,7 +18,7 @@ dependencies {
         transitive = false
     }
 
-    compileOnly("com.github.GTNewHorizons:Angelica:1.0.0-alpha52:api") {
+    compileOnly("com.github.GTNewHorizons:Angelica:1.0.0-beta2:api") {
         transitive = false
     }
 }
